Fixed problem on iphone
Fixed panel collapse not working on iphone.

--- a/css/style.css
+++ b/css/style.css
@@ -139,3 +139,7 @@ textarea, textarea:focus {
         width: 90%;
     }
 }
+
+[data-toggle~="collapse"] {
+    cursor: pointer;
+}
